# debox-chat-python-sdk

./: README.md  README_CN.md  main.py  pyproject.toml
boxbotapi/: __init__.py  bot.py  configs.py  helpers.py  html.py  httplib.py  log.py  params.py  types.py
example/: basic.py
tests/: test_bot.py  test_helpers.py  test_params.py  test_types.py
